fix for program gap

--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -20,10 +20,12 @@
 		}
 	}
 }
-.nav .gap-after.program-gap{
-	border-right: none!important;
-	margin-right: 0;
-	padding-right: 1em;
+@media #{$mobile}{
+	.nav .gap-after.program-gap{
+		border-right: none!important;
+		margin-right: 0;
+		padding-right: 1em;
+	}
 }
 .more-info{
 	font-size: .8em;
